tests/snapshots/pretty_print_snapshots__parser_with_tail_after_flags.snap
---
source: tests/pretty_print_snapshots.rs
expression: out
---
── input (width 80) ──
(parser "sudo" (style gnu) (flags posix) (rest #cmd))
── output ──
(parser "sudo"
  (style gnu)
  (flags posix)
  (rest #cmd))
