tests/snapshots/pretty_print_snapshots__parser_with_tail_after_token.snap
---
source: tests/pretty_print_snapshots.rs
assertion_line: 268
expression: out
---
(parser "mise" (style gnu) (tail (after "--")))
