tests/snapshots/pretty_print_snapshots__parser_xargs_with_flags_and_parameters.snap
---
source: tests/pretty_print_snapshots.rs
assertion_line: 288
expression: out
---
(parser "xargs" (style gnu) (parameter ["n" "I" "L" "P" "d"])
                            (flag ["0" "r"]) (tail (after :flags)))
