tests/snapshots/pretty_print_snapshots__rule_allow_with_reason.snap
---
source: tests/pretty_print_snapshots.rs
assertion_line: 37
expression: out
---
(rule "ls"
  (allow "safe ls"))
