tests/snapshots/pretty_print_snapshots__rule_and_positional_then_tail.snap
---
source: tests/pretty_print_snapshots.rs
assertion_line: 216
expression: out
---
(rule "ssh"
  (and (positional [:ssh/host *]) (tail (authorise))))
