tests/snapshots/pretty_print_snapshots__rule_and_two_clauses.snap
---
source: tests/pretty_print_snapshots.rs
expression: out
---
── input (width 80) ──
(rule "git" (and (positional "push") (allow "push ok")))
── output ──
(rule "git"
  (and (positional "push") (allow "push ok")))
