tests/snapshots/pretty_print_snapshots__rule_anywhere.snap
---
source: tests/pretty_print_snapshots.rs
expression: out
---
── input (width 80) ──
(rule "rm" (and (anywhere "-r") (deny)))
── output ──
(rule "rm"
  (and (anywhere "-r") (deny)))
