tests/snapshots/pretty_print_snapshots__rule_ask_with_reason.snap
---
source: tests/pretty_print_snapshots.rs
expression: out
---
── input (width 80) ──
(rule "rm" (ask "Recursive deletion — confirm the target"))
── output ──
(rule "rm"
  (ask "Recursive deletion — confirm the target"))
