tests/snapshots/pretty_print_snapshots__rule_authorise_inside_parameter.snap
---
source: tests/pretty_print_snapshots.rs
assertion_line: 204
expression: out
---
(rule "bash"
  (parameter "c" (authorise)))
