tests/snapshots/pretty_print_snapshots__rule_bare_allow.snap
---
source: tests/pretty_print_snapshots.rs
assertion_line: 31
expression: out
---
(rule "ls"
  (allow))
