tests/snapshots/pretty_print_snapshots__rule_cond_three_clauses.snap
---
source: tests/pretty_print_snapshots.rs
expression: out
---
── input (width 80) ──
(rule "rm"
  (cond ((positional "/") (deny "filesystem root"))
        ((flag ["r" "recursive"]) (ask "recursive"))
        (else (allow))))
── output ──
(rule "rm"
  (cond
    ((positional "/")
     (deny "filesystem root"))
    ((flag ["r" "recursive"])
     (ask "recursive"))
    (else
     (allow))))
