tests/snapshots/pretty_print_snapshots__rule_cond_user_authored_three_space_indent.snap
---
source: tests/pretty_print_snapshots.rs
expression: out
---
── input (width 80) ──
(rule (or "terraform" "tofu")
  (cond
   ((or (exact) (positional "version"))
    (allow "Program introspection"))

   ((positional (or "fmt" "init" "plan" "test" "validate"))
    (allow "Safe operation"))

   ((positional (or "apply" "destroy"))
    (ask "Infra change requires confirmation"))))
── output ──
(rule (or "terraform" "tofu")
  (cond
   ((or (exact) (positional "version"))
    (allow "Program introspection"))

   ((positional (or "fmt" "init" "plan" "test" "validate"))
    (allow "Safe operation"))

   ((positional (or "apply" "destroy"))
    (ask "Infra change requires confirmation"))))
